# TrainingLog-Rust

./: .env.example  .env.sample  Cargo.toml  Dockerfile  README.md
deploy/: app.env.example  db.env.example  setup.sh
deploy/grafana/dashboards/: sports-log.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
deploy/quadlets/: grafana.container  postgres.container  prometheus.container  sports-log-net.network  sports-log.container
migrations/: 001_users.sql  002_profiles.sql  003_oauth_connections.sql  004_local_credentials.sql  005_otp_challenges.sql  006_activities.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs
src/auth/: jwt.rs  local.rs  middleware.rs  mod.rs  oauth.rs  otp.rs
src/models/: activity.rs  mod.rs  profile.rs  user.rs
src/routes/: activities.rs  mod.rs  profile.rs
